--- a/client/c2c-app/src/app/app.component.html
+++ b/client/c2c-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="bg-imag" fxLayout="column" fxLayoutAlign="start">
+<div class="bg-image" fxLayout="column" fxLayoutAlign="start">
     <div>
         <div>
             <router-outlet name="header"></router-outlet>
@@ -6,9 +6,7 @@
         <div style="padding: 2vh 50px">
             <router-outlet></router-outlet>
         </div>
-        <div>
-            <router-outlet name="tester"></router-outlet>
-        </div>
+        <!--<div><router-outlet name="tester"></router-outlet></div>-->
     </div>
     <div>
         <router-outlet name="footer"></router-outlet>
