add request api and display data

--- a/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
+++ b/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
@@ -60,9 +60,9 @@
                     <mat-icon color="primary">drive_eta</mat-icon>
                     <span>Register as Car Owner</span>
                 </button>
-                <button mat-menu-item routerLink="/logout">
-                    <mat-icon color="primary"> logout</mat-icon>
-                    <span>Logout</span>
+                <button mat-menu-item routerLink="/carpark">
+                    <mat-icon color="primary">local_parking</mat-icon>
+                    <span>carpark</span>
                 </button>
             </mat-menu>
         </div>
