--- a/client/c2c-app/src/app/components/main/homepage/homepage.component.html
+++ b/client/c2c-app/src/app/components/main/homepage/homepage.component.html
@@ -1,8 +1,4 @@
-<p>homepage</p>
-
-
-
-<h3>Login Form</h3>
+<h3>Search Form</h3>
 <form [formGroup]="searchForm" (ngSubmit)="search()" >
     <div fxLayout="column" fxLayoutAlign="start">
         <div>
