--- a/client/c2c-app/src/styles.css
+++ b/client/c2c-app/src/styles.css
@@ -3,6 +3,14 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+body {
+    background-color:#CCDFF1;
+}
+
+.mat-card{
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
 .form-border{
     border:solid black 2px;
 }
