refactor payment component and payment half complete

--- a/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
+++ b/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar color="primary" fxLayout="row" fxLayoutAlign="space-between center">
-    <div (click)="gotoHome()">
+    <div 
+    (click)="gotoHome()">
         <mat-icon>home</mat-icon>
         <span>Car2Car</span>
+        
     </div>
     <div fxLayout="row" fxLayoutAlign="end center">
         <div >
