--- a/client/c2c-app/src/app/components/test/routingpage.component.html
+++ b/client/c2c-app/src/app/components/test/routingpage.component.html
@@ -19,6 +19,7 @@
     <button type="button" routerLink="/renter/check-booking">renter/check-booking</button>
     <button type="button" routerLink="/renter/manage-profile">renter/manage-profile</button>
     <button type="button" routerLink="/renter/manage-booking">renter/manage-booking</button>
+    <button type="button" routerLink="/payment/4">payment</button>
 </div>
 <div>
     <button type="button" routerLink="/owner/add-car">owner add-car</button>
