--- a/client/c2c-app/src/app/components/test/routingpage.component.html
+++ b/client/c2c-app/src/app/components/test/routingpage.component.html
@@ -7,7 +7,7 @@
     <button type="button" routerLink="/register/renter">Register:renter</button>
     <button type="button" routerLink="/register/owner">Register:Car owner</button>
     <button type="button" routerLink="/logout">Logout</button>
-    <button type="button" (click)="subscribeToNotifications()">subscribe</button>
+    <!--<button type="button" (click)="subscribeToNotifications()">subscribe</button>-->
 </div>
 <div>
     <button type="button" routerLink="/list-cars/all">Search All</button>
